fix unsupported operation in unit test when da list is cleared